# rt-ticket-utils

./: README.md  pyproject.toml
ticket_utils/: hpc_ticket_utils.py  hpc_tickets.py  models.py  pyproject.toml  utils.py
ticket_utils/templates/: footer.j2  hpc_account_creation_notification.j2  hpc_added_to_group_notification.j2  hpc_class_account_notification.j2  hpc_course_add_instructor.j2  hpc_course_add_student.j2  hpc_course_add_ta.j2  hpc_course_storage.j2  hpc_storage.j2  hpc_storage_update.j2  hpc_welcome.j2  map_smb_drive.j2  notifications.j2  rstore_share.j2  rstore_storage_update.j2
