[project]
name = "rt-ticket-utils"
version = "0.1.0"
description = "utilities for creating RT tickets for HPC and RStore"
authors = [
  {name = "Chris Barnett", email = "christopher.barnett@tufts.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pydantic >= 1.10.2",
  "jinja2 >= 3.1.2"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["ticket_utils/templates"]